test appointment finished...
